<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.mbhs.speedtrig.ResponseWindow" >

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/button_submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

    <TextView
        android:id="@+id/response"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/blank_response"
        android:textSize="18sp"
        android:layout_alignTop="@+id/auxiliary"
        android:layout_toRightOf="@+id/auxiliary"
        android:layout_toEndOf="@+id/auxiliary"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />

    <TextView
        android:id="@+id/auxiliary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_prompt"
        android:textSize="18sp"
        android:layout_above="@+id/buttonNeg"
        android:layout_alignLeft="@+id/button_dne"
        android:layout_alignStart="@+id/button_dne"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/buttonNeg"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonRoot"
        android:layout_toLeftOf="@+id/buttonRoot"
        android:layout_toStartOf="@+id/buttonRoot"
        android:text="@string/minus"
        android:onClick="updateEverything"/>
    <Button
        android:id="@+id/buttonRoot"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:layout_above="@+id/button1"
        android:text="@string/sqrt"
        android:onClick="updateEverything" />

    <Button
        android:id="@+id/buttonDiv"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonRoot"
        android:layout_toRightOf="@+id/buttonRoot"
        android:layout_toEndOf="@+id/buttonRoot"
        android:text="@string/division"
        android:onClick="updateEverything" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/two"
        android:onClick="updateEverything" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button1"
        android:layout_toRightOf="@+id/button1"
        android:layout_toEndOf="@+id/button1"
        android:text="@string/three"
        android:onClick="updateEverything" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:onClick="updateEverything"
        android:layout_below="@+id/buttonNeg"
        android:layout_toLeftOf="@+id/buttonRoot"
        android:layout_toStartOf="@+id/buttonRoot" />


    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:layout_below="@+id/button1"
        android:text="@string/five"
        android:onClick="updateEverything" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button4"
        android:layout_toRightOf="@+id/button4"
        android:layout_toEndOf="@+id/button4"
        android:text="@string/six"
        android:onClick="updateEverything" />

    <Button
        android:id="@+id/button6"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button4"
        android:layout_toLeftOf="@+id/button4"
        android:layout_toStartOf="@+id/button4"
        android:text="@string/four"
        android:onClick="updateEverything" />

    <Button
        android:id="@+id/button7"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_below="@+id/button4"
        android:text="@string/eight"
        android:onClick="updateEverything" />

    <Button
        android:id="@+id/button8"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button7"
        android:layout_toRightOf="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:text="@string/nine"
        android:onClick="updateEverything" />

    <Button
        android:id="@+id/button9"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button7"
        android:layout_toLeftOf="@+id/button7"
        android:layout_toStartOf="@+id/button7"
        android:text="@string/seven"
        android:onClick="updateEverything" />

    <Button
        android:id="@+id/button0"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:onClick="updateEverything"
        android:layout_below="@+id/buttonNeg"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toStartOf="@+id/button3"
        android:layout_alignLeft="@+id/button_dne"
        android:layout_alignStart="@+id/button_dne" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_list"
        android:textSize="21sp"
        android:layout_alignTop="@+id/timerTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical"
        android:visibility="invisible" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button10"
        android:onClick="removeLast"
        android:text="@string/backspace"
        android:layout_below="@+id/button7"
        android:layout_alignRight="@+id/button8"
        android:layout_alignEnd="@+id/button8"
        android:layout_alignLeft="@+id/button9"
        android:layout_alignStart="@+id/button9" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dne"
        android:id="@+id/button_dne"
        android:onClick="updateEverything"
        android:layout_above="@+id/button3"
        android:layout_toLeftOf="@+id/buttonNeg"
        android:layout_toStartOf="@+id/buttonNeg" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pi"
        android:onClick="updateEverything"
        android:layout_above="@+id/button2"
        android:layout_toRightOf="@+id/buttonDiv"
        android:layout_toEndOf="@+id/buttonDiv" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="34sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:onClick="openNextQuestion"
        android:textSize="21sp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button_submit"
        android:layout_alignEnd="@+id/button_submit" />

    <Button
        android:id="@+id/button12"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:onClick="openPreviousQuestion"
        android:textSize="21sp"
        android:layout_alignTop="@+id/button11"
        android:layout_toLeftOf="@+id/button9"
        android:layout_toStartOf="@+id/button9"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false" />

    <Button
        android:id="@+id/button15"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:onClick="startSubmitDialog"
        android:textSize="21sp"
        android:layout_alignTop="@+id/button11"
        android:layout_alignRight="@+id/button11"
        android:layout_alignEnd="@+id/button11"
        android:visibility="invisible" />

</RelativeLayout>
